📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -10894,5 +10894,181 @@
         "published": "Fri, 12 Dec 2025 16:59:18 +0000",
         "source": "AI News",
         "summary": "<p>Generative AI\u2019s experimental phase is concluding, making way for truly autonomous systems in 2026 that act rather than merely summarise. 2026 will lose the focus on model parameters and be about agency, energy efficiency, and the ability to navigate complex industrial environments. The next twelve months represent a departure from chatbots toward autonomous systems executing [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/ai-in-2026-experimental-ai-conclude"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/data-breach-at-credit-check-giant-700credit-affects-at-least-5-6-million/",
+        "title": "Data breach at credit check giant 700Credit affects at least 5.6 million",
+        "link": "https://techcrunch.com/2025/12/12/data-breach-at-credit-check-giant-700credit-affects-at-least-5-6-million/",
+        "published": "Fri, 12 Dec 2025 17:35:46 +0000",
+        "source": "TechCrunch",
+        "summary": "700Credit, a company that runs credit checks and identity verification services for auto dealerships across the U.S., had a data breach that allowed a hacker to steal names, addresses, dates of birth, and Social Security numbers."
+    },
+    {
+        "id": "https://www.theverge.com/news/843483/google-translate-live-speech-translations-headphones",
+        "title": "Google Translate brings real-time speech translations to any headphones",
+        "link": "https://www.theverge.com/news/843483/google-translate-live-speech-translations-headphones",
+        "published": "2025-12-12T13:11:14-05:00",
+        "source": "The Verge",
+        "summary": "Google Translate's latest update brings live speech translations, originally available only on the Pixel Buds, to any headphones you want, with support for over 70 languages. It's rolling out today in beta and just requires a compatible Android phone with the Translate app (unlike Apple's similar feature, which requires AirPods). It's one of a few [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/802964/best-mom-gift-ideas",
+        "title": "The 40 best gift ideas for mom this holiday season",
+        "link": "https://www.theverge.com/gadgets/802964/best-mom-gift-ideas",
+        "published": "2025-12-12T12:45:20-05:00",
+        "source": "The Verge",
+        "summary": "Your mom deserves the best, and we're going to help you get them something special. The right gift can make family or friend time more valuable, after all, or it can greatly enrich time spent alone. If your mom says that she has all that she needs, don't take her word for it and show [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/843667/hisense-s7n-canvas-tv-tomtoc-fancycase-g05-slim-case-deal-sale",
+        "title": "Hisense\u2019s CanvasTV is a great Samsung Frame TV alternative at nearly half off",
+        "link": "https://www.theverge.com/gadgets/843667/hisense-s7n-canvas-tv-tomtoc-fancycase-g05-slim-case-deal-sale",
+        "published": "2025-12-12T12:36:24-05:00",
+        "source": "The Verge",
+        "summary": "Samsung\u2019s Frame TV is one of the coolest-looking TVs you can buy, doubling as wall art when you\u2019re not watching \u2014&#160; but it\u2019s pricey. If you like the idea of a TV that displays art when not in use but is far more affordable, Hisense\u2019s S7N CanvasTV delivers a similar vibe for a lot less, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/843561/bryan-fuller-interview-dust-bunny",
+        "title": "Hannibal creator Bryan Fuller wanted his first film to be horror for everyone",
+        "link": "https://www.theverge.com/entertainment/843561/bryan-fuller-interview-dust-bunny",
+        "published": "2025-12-12T12:15:00-05:00",
+        "source": "The Verge",
+        "summary": "When Bryan Fuller set out to make his first feature film, his goal was to make the kind of family-friendly scares that he loved as a kid. Think Gremlins or Ghostbusters. The creator of Hannibal and Pushing Daisies ended up crafting a story called Dust Bunny, about a young girl named Aurora who hires a [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/the-best-stocking-stuffers-you-can-get-for-50-or-less-130049325.html?src=rss",
+        "title": "The best stocking stuffers you can get for $50 or less",
+        "link": "https://www.engadget.com/computing/accessories/the-best-stocking-stuffers-you-can-get-for-50-or-less-130049325.html?src=rss",
+        "published": "Fri, 12 Dec 2025 18:01:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>While it\u2019s probably tempting to go all-out and give a loved one their most desired gadget this year, doing so could put a big dent in your budget. And it would be wrong to assume that you have to spend hundreds to get a good tech gift that anyone will appreciate. There are plenty of gadgets and accessories out there that don\u2019t cost an arm and a leg and that will also make good additions to their kits. Here are some of our favorite tech gift ideas that come in at $50 or less.</p> \n<h2 id=\"jump"
+    },
+    {
+        "id": "https://www.engadget.com/apps/google-translate-is-now-better-at-translating-slang-terms-and-idioms-using-ai-173428316.html?src=rss",
+        "title": "Google Translate is now better at translating slang terms and idioms using AI",
+        "link": "https://www.engadget.com/apps/google-translate-is-now-better-at-translating-slang-terms-and-idioms-using-ai-173428316.html?src=rss",
+        "published": "Fri, 12 Dec 2025 17:34:28 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Google is rolling out new Gemini-assisted <a href=\"https://blog.google/products/search/gemini-capabilities-translation-upgrades/\">functionality</a> to Search and its Translate app. It says its AI can now provide more natural and accurate text translations for phrases that have more &quot;nuanced meanings.&quot;&nbsp; Translate will now take slang terms and colloquial expressions into consideration rather than provide sometimes unhelpful direct translations.</p>\n<p>The latest update to its tex"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/doom-studio-id-software-forms-wall-to-wall-union-with-a-majority-of-employees-voting-in-favor-164808829.html?src=rss",
+        "title": "Doom studio id Software forms 'wall-to-wall' union, with a majority of employees voting in favor",
+        "link": "https://www.engadget.com/big-tech/doom-studio-id-software-forms-wall-to-wall-union-with-a-majority-of-employees-voting-in-favor-164808829.html?src=rss",
+        "published": "Fri, 12 Dec 2025 16:48:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Id Software, the company behind Doom, has voted in favor of forming a &quot;wall-to-wall&quot; union. The term &quot;wall-to-wall&quot; refers to a union that includes every employee, regardless of duties. The vote wasn't unanimous, though a majority did vote in favor of the union.</p>\n<p>The union will work in conjunction with the Communications Workers of America (CWA), which is the same organization involved with <a href=\"https://www.engadget.com/gaming/zenimax-and-microsoft-ratify-union-a"
+    },
+    {
+        "id": "https://gizmodo.com/zootopia-2-box-office-records-disney-2000699178",
+        "title": "\u2018Zootopia 2\u2019 Has Reached $1 Billion in Record-Breaking Time",
+        "link": "https://gizmodo.com/zootopia-2-box-office-records-disney-2000699178",
+        "published": "Fri, 12 Dec 2025 18:15:02 +0000",
+        "source": "Gizmodo",
+        "summary": "The animated Disney sequel hit the box-office milestone after just 17 days in theaters."
+    },
+    {
+        "id": "https://gizmodo.com/sam-altmans-eyeball-scanning-startup-launches-super-app-2000699091",
+        "title": "Sam Altman\u2019s Eyeball-Scanning Startup Launches \u2018Super App\u2019",
+        "link": "https://gizmodo.com/sam-altmans-eyeball-scanning-startup-launches-super-app-2000699091",
+        "published": "Fri, 12 Dec 2025 18:00:47 +0000",
+        "source": "Gizmodo",
+        "summary": "Want to chat with your friends? Please look into this orb."
+    },
+    {
+        "id": "https://gizmodo.com/watch-rare-video-of-orcas-teaming-up-with-dolphins-to-hunt-giant-salmon-2000699100",
+        "title": "Watch Rare Video of Orcas Teaming Up With Dolphins to Hunt Giant Salmon",
+        "link": "https://gizmodo.com/watch-rare-video-of-orcas-teaming-up-with-dolphins-to-hunt-giant-salmon-2000699100",
+        "published": "Fri, 12 Dec 2025 17:55:56 +0000",
+        "source": "Gizmodo",
+        "summary": "The two top predators seem to be working together to track, kill, and feast on salmon, researchers say."
+    },
+    {
+        "id": "https://gizmodo.com/new-batch-of-epstein-photos-include-bill-gates-richard-branson-and-segway-inventor-2000699130",
+        "title": "New Batch of Epstein Photos Include Bill Gates, Richard Branson, and Segway Inventor",
+        "link": "https://gizmodo.com/new-batch-of-epstein-photos-include-bill-gates-richard-branson-and-segway-inventor-2000699130",
+        "published": "Fri, 12 Dec 2025 17:41:27 +0000",
+        "source": "Gizmodo",
+        "summary": "President Trump is in there too, but you could probably guess that by now."
+    },
+    {
+        "id": "https://gizmodo.com/plant-based-diets-can-work-for-kids-but-new-study-outlines-concerning-risks-2000699057",
+        "title": "Plant-Based Diets Can Work for Kids, but New Study Outlines Concerning Risks",
+        "link": "https://gizmodo.com/plant-based-diets-can-work-for-kids-but-new-study-outlines-concerning-risks-2000699057",
+        "published": "Fri, 12 Dec 2025 17:25:02 +0000",
+        "source": "Gizmodo",
+        "summary": "There are several nutrients that vegan and vegetarian kids can miss out on without careful planning, a review of the evidence finds."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-amazon-kindle-paperwhite-deal",
+        "title": "Surprise! Kindles are back on sale at Amazon for holiday shoppers \u2014 prices start at $89",
+        "link": "https://mashable.com/article/dec-12-amazon-kindle-paperwhite-deal",
+        "published": "Fri, 12 Dec 2025 17:25:15 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 12, get the Amazon Kindle Paperwhite for just $134.99. That saves you $25 off its list price. The savings aren't quite as abundant as they were on Black Friday, but it's a great last minute deal to close out the year."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-dji-power-1000-deal",
+        "title": "The DJI Power 1000 is $350 off right now",
+        "link": "https://mashable.com/article/dec-12-dji-power-1000-deal",
+        "published": "Fri, 12 Dec 2025 17:17:02 +0000",
+        "source": "Mashable",
+        "summary": "Right now, you can grab the DJI Power 1000 Portable Power Station for $349 at Amazon. That's a 50% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-roborock-qrevo-s5v-robot-vacuum-mop-deal",
+        "title": "Bring home a Roborock Qrevo S5V robot vacuum and mop for its lowest price ever",
+        "link": "https://mashable.com/article/dec-12-roborock-qrevo-s5v-robot-vacuum-mop-deal",
+        "published": "Fri, 12 Dec 2025 17:08:19 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 12, get the Roborock Qrevo S5V robot vacuum and mop for its lowest price ever at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dating-trends-2026-ai-lovehoney",
+        "title": "AI will play an even bigger role in our love lives in 2026, experts say",
+        "link": "https://mashable.com/article/dating-trends-2026-ai-lovehoney",
+        "published": "Fri, 12 Dec 2025 17:04:18 +0000",
+        "source": "Mashable",
+        "summary": "Lovehoney's predictions for dating and sex in 2026 include an increasing reliance on AI for advice for love and sex, and a move away from dating apps."
+    },
+    {
+        "id": "https://mashable.com/article/motorola-book-style-foldable-teased-ces-2025",
+        "title": "Motorola might announce a book-style foldable phone at CES 2026",
+        "link": "https://mashable.com/article/motorola-book-style-foldable-teased-ces-2025",
+        "published": "Fri, 12 Dec 2025 16:54:43 +0000",
+        "source": "Mashable",
+        "summary": "Motorola might expand its foldable portfolio with a book-style smartphone in January, which would compete with Samsung and an expected foldable iPhone."
+    },
+    {
+        "id": "https://www.zdnet.com/article/you-can-buy-refurbished-tech-from-back-market-in-person-now-heres-where/",
+        "title": "Holiday shopping for refurbished tech? Test and buy it from Back Market's store - but hurry",
+        "link": "https://www.zdnet.com/article/you-can-buy-refurbished-tech-from-back-market-in-person-now-heres-where/",
+        "published": "Fri, 12 Dec 2025 18:04:00 GMT",
+        "source": "Latest news",
+        "summary": "You can see, touch, and test used tech before buying, but act fast - Back Market's pop-up store closes next week."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-2026-predictions/",
+        "title": "AI could finally pay off for businesses in 2026 - thanks to this, experts say",
+        "link": "https://www.zdnet.com/article/ai-2026-predictions/",
+        "published": "Fri, 12 Dec 2025 17:18:00 GMT",
+        "source": "Latest news",
+        "summary": "If you've been waiting for AI promises to materialize, 2026 may be your year -- and this unexpected element could be the key."
+    },
+    {
+        "id": "https://flak.tedunangst.com/post/async-dns",
+        "title": "Async DNS",
+        "link": "https://flak.tedunangst.com/post/async-dns",
+        "published": "Fri, 12 Dec 2025 16:52:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46245923\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/Ami3466/tomcp",
+        "title": "Show HN: tomcp.org \u2013 Turn any URL into an MCP server",
+        "link": "https://github.com/Ami3466/tomcp",
+        "published": "Fri, 12 Dec 2025 17:10:16 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46246117\">Comments</a>"
     }
 ]
