📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11070,5 +11070,109 @@
         "published": "Fri, 12 Dec 2025 17:10:16 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46246117\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/843923/hollywood-director-netflix-conviction-fraud-carl-rinsch",
+        "title": "Director found guilty of scamming Netflix out of $11 million",
+        "link": "https://www.theverge.com/news/843923/hollywood-director-netflix-conviction-fraud-carl-rinsch",
+        "published": "2025-12-12T13:54:57-05:00",
+        "source": "The Verge",
+        "summary": "Hollywood director Carl Erik Rinsch was convicted of scamming $11 million from Netflix to spend on luxury items, including five Rolls-Royces and a Ferrari, as reported earlier by Deadline. A New York jury found Rinsch guilty of several charges on Thursday, including fraud and money laundering. Rinsch, who's known for directing 47 Ronin, was charged [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/why-spacex-is-finally-gearing-up-to-go-public/",
+        "title": "Why SpaceX Is Finally Gearing Up to Go Public",
+        "link": "https://www.wired.com/story/why-spacex-is-finally-gearing-up-to-go-public/",
+        "published": "Fri, 12 Dec 2025 18:37:54 +0000",
+        "source": "WIRED",
+        "summary": "Like so many things in Elon Musk's orbit, a lot of it may come down to AI."
+    },
+    {
+        "id": "https://arstechnica.com/culture/2025/12/a-study-in-contrasts-the-cinematography-of-wake-up-dead-man/",
+        "title": "A study in contrasts: The cinematography of Wake Up Dead Man",
+        "link": "https://arstechnica.com/culture/2025/12/a-study-in-contrasts-the-cinematography-of-wake-up-dead-man/",
+        "published": "Fri, 12 Dec 2025 18:58:12 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Ars chats with cinematographer Steve Yedlin about bringing Rian Johnson's Gothic vision to life."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/trump-tries-to-block-state-ai-laws-himself-after-congress-decided-not-to/",
+        "title": "Trump tries to block state AI laws himself after Congress decided not to",
+        "link": "https://arstechnica.com/tech-policy/2025/12/trump-tries-to-block-state-ai-laws-himself-after-congress-decided-not-to/",
+        "published": "Fri, 12 Dec 2025 18:29:50 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Trump claims state laws force AI makers to embed \"ideological bias\" in models."
+    },
+    {
+        "id": "https://arstechnica.com/health/2025/12/man-shocks-doctors-with-extreme-blood-pressure-stroke-from-energy-drinks/",
+        "title": "Man shocks doctors with extreme blood pressure, stroke from energy drinks",
+        "link": "https://arstechnica.com/health/2025/12/man-shocks-doctors-with-extreme-blood-pressure-stroke-from-energy-drinks/",
+        "published": "Fri, 12 Dec 2025 17:33:22 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "His blood pressure was 254/150. Readings of 180/120 are considered an emergency."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/clair-obscur-expedition-33-devs-dropped-a-big-update-after-sweeping-the-game-awards-183628313.html?src=rss",
+        "title": "Clair Obscur: Expedition 33 devs dropped a big update after sweeping The Game Awards",
+        "link": "https://www.engadget.com/gaming/clair-obscur-expedition-33-devs-dropped-a-big-update-after-sweeping-the-game-awards-183628313.html?src=rss",
+        "published": "Fri, 12 Dec 2025 18:36:28 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Sandfall Interactive, the developer of <a class=\"link\" href=\"https://www.engadget.com/gaming/clair-obscur-expedition-33-preview-stunning-visuals-innovative-combat-prime-melodrama-140052194.html\" target=\"_blank\"><em>Clair Obscur: Expedition 33</em></a>, knows how to ride the wave. Right after the visually stunning RPG finished dominating The Game Awards, the team <a class=\"link\" href=\"https://www.expedition33.com/post/thank-you-update-available-now-thank-you-for-an-amazing-year\" target=\"_blank"
+    },
+    {
+        "id": "https://gizmodo.com/tanning-beds-are-giving-us-skin-cancer-where-the-sun-doesnt-shine-2000699139",
+        "title": "Tanning Beds Are Giving Us Skin Cancer Where the Sun Doesn\u2019t Shine",
+        "link": "https://gizmodo.com/tanning-beds-are-giving-us-skin-cancer-where-the-sun-doesnt-shine-2000699139",
+        "published": "Fri, 12 Dec 2025 19:00:30 +0000",
+        "source": "Gizmodo",
+        "summary": "New research highlights the unique dangers of the UV radiation provided by tanning beds."
+    },
+    {
+        "id": "https://gizmodo.com/u-s-government-websites-are-hosting-pdfs-promoting-porn-and-scams-2000699133",
+        "title": "U.S. Government Websites Are Hosting PDFs Promoting Porn and Scams",
+        "link": "https://gizmodo.com/u-s-government-websites-are-hosting-pdfs-promoting-porn-and-scams-2000699133",
+        "published": "Fri, 12 Dec 2025 19:00:22 +0000",
+        "source": "Gizmodo",
+        "summary": "Not exactly a public service."
+    },
+    {
+        "id": "https://gizmodo.com/oh-great-smart-glasses-that-record-everything-you-say-2000699011",
+        "title": "Oh Great, Smart Glasses That Record Everything You Say",
+        "link": "https://gizmodo.com/oh-great-smart-glasses-that-record-everything-you-say-2000699011",
+        "published": "Fri, 12 Dec 2025 18:31:47 +0000",
+        "source": "Gizmodo",
+        "summary": "It's just audio for now, but the Mira set an icky precedent for always-on recording in smart glasses."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-hisense-canvas-tv-deal",
+        "title": "Hisenses 65-inch The Frame dupe is down to a record-low $699 at Amazon",
+        "link": "https://mashable.com/article/dec-12-hisense-canvas-tv-deal",
+        "published": "Fri, 12 Dec 2025 17:50:22 +0000",
+        "source": "Mashable",
+        "summary": "The Hisense 65-inch Canvas TV is down to just $699.99 at Amazon, a new best price ever. That beats its Black Friday price by nearly $200."
+    },
+    {
+        "id": "https://www.zdnet.com/article/opera-neon-ai-browser-frontier-models-security-risks-cost/",
+        "title": "Opera's Neon AI browser now available for $20/month - packed with these power user features",
+        "link": "https://www.zdnet.com/article/opera-neon-ai-browser-frontier-models-security-risks-cost/",
+        "published": "Fri, 12 Dec 2025 18:19:54 GMT",
+        "source": "Latest news",
+        "summary": "The tool is built for AI power users and allows access to a handful of frontier models. It also comes with security risks."
+    },
+    {
+        "id": "https://www.rockpapershotgun.com/id-software-devs-form-wall-to-wall-union-with-165-workers-at-doom-studio-the-latest-to-vote-in-favour",
+        "title": "Id Software devs form \"wall-to-wall\" union",
+        "link": "https://www.rockpapershotgun.com/id-software-devs-form-wall-to-wall-union-with-165-workers-at-doom-studio-the-latest-to-vote-in-favour",
+        "published": "Fri, 12 Dec 2025 18:11:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46246845\">Comments</a>"
+    },
+    {
+        "id": "https://www.jeffgeerling.com/blog/2025/cm0-new-raspberry-pi-you-cant-buy",
+        "title": "CM0 \u2013 a new Raspberry Pi you can't buy",
+        "link": "https://www.jeffgeerling.com/blog/2025/cm0-new-raspberry-pi-you-cant-buy",
+        "published": "Fri, 12 Dec 2025 15:19:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46244922\">Comments</a>"
     }
 ]
