📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11174,5 +11174,141 @@
         "published": "Fri, 12 Dec 2025 15:19:19 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46244922\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/ok-whats-going-on-with-linkedins-algo/",
+        "title": "OK, what\u2019s going on with LinkedIn\u2019s algo?",
+        "link": "https://techcrunch.com/2025/12/12/ok-whats-going-on-with-linkedins-algo/",
+        "published": "Fri, 12 Dec 2025 19:38:16 +0000",
+        "source": "TechCrunch",
+        "summary": "Women ran an experiment to see if LinkedIn's new algo was being sexist and thought they proved it. But there's more complexity involved, experts say."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/microsoft-buys-3-6m-metric-tons-of-carbon-removal-from-bioenergy-plant/",
+        "title": "Microsoft buys 3.6M metric tons of carbon removal from bioenergy plant",
+        "link": "https://techcrunch.com/2025/12/12/microsoft-buys-3-6m-metric-tons-of-carbon-removal-from-bioenergy-plant/",
+        "published": "Fri, 12 Dec 2025 19:16:10 +0000",
+        "source": "TechCrunch",
+        "summary": "Microsoft's data center ambitions have imperiled its 2030 pledge to remove more carbon than it generates, making carbon removal credits all but necessary."
+    },
+    {
+        "id": "https://www.theverge.com/news/839534/apple-iphone-ipad-mac-update-26-2",
+        "title": "iOS 26.2 is here with Liquid Glass, AirDrop, and Apple Music updates",
+        "link": "https://www.theverge.com/news/839534/apple-iphone-ipad-mac-update-26-2",
+        "published": "2025-12-12T14:18:42-05:00",
+        "source": "The Verge",
+        "summary": "Today, Apple officially released iOS 26.2 for iPhone 11 and newer devices, which includes new Lock Screen customizations for you to adjust the opacity level, as well as the ability to use AirDrop with people who aren't in your contacts by sharing a one-time code with them instead. There are also new updates going out [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/843720/ikea-qi-2-wireless-charger-vastmarke-silicone",
+        "title": "Mmm, Qi donuts",
+        "link": "https://www.theverge.com/news/843720/ikea-qi-2-wireless-charger-vastmarke-silicone",
+        "published": "2025-12-12T14:10:57-05:00",
+        "source": "The Verge",
+        "summary": "After announcing new Matter-compatible smart home devices and stylish wireless speakers over the past few months, Ikea continues to expand its consumer electronics offerings with three new wireless chargers. They're limited to 15W Qi2.0 charging rates but are well priced and feature designs that look more like home decor accents than traditional tech accessories. The [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/uncanny-valley-podcast-amd-ceo-lisa-su-isnt-afraid-of-the-competition/",
+        "title": "AMD CEO Lisa Su Isn\u2019t Afraid of the Competition",
+        "link": "https://www.wired.com/story/uncanny-valley-podcast-amd-ceo-lisa-su-isnt-afraid-of-the-competition/",
+        "published": "Fri, 12 Dec 2025 20:01:14 +0000",
+        "source": "WIRED",
+        "summary": "In this episode of Uncanny Valley we take you through our recent conversation with Lisa Su, and go behind the scenes of our Big Interview event."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/ukrainians-sue-us-chip-firms-for-powering-russian-drones-missiles/",
+        "title": "Ukrainians sue US chip firms for powering Russian drones, missiles",
+        "link": "https://arstechnica.com/tech-policy/2025/12/ukrainians-sue-us-chip-firms-for-powering-russian-drones-missiles/",
+        "published": "Fri, 12 Dec 2025 19:49:27 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Lawsuits may force Intel, AMD, and Texas Instruments to do more to control chip supply chains."
+    },
+    {
+        "id": "https://arstechnica.com/ai/2025/12/scientists-built-an-ai-co-pilot-for-prosthetic-bionic-hands/",
+        "title": "Scientists built an AI co-pilot for prosthetic bionic hands",
+        "link": "https://arstechnica.com/ai/2025/12/scientists-built-an-ai-co-pilot-for-prosthetic-bionic-hands/",
+        "published": "Fri, 12 Dec 2025 19:14:31 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Managing each finger separately can, with the right sensors, ease control issues."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/ikeas-new-wireless-charger-is-as-cute-as-it-is-practical-195013422.html?src=rss",
+        "title": "IKEA's new wireless charger is as cute as it is practical",
+        "link": "https://www.engadget.com/mobile/smartphones/ikeas-new-wireless-charger-is-as-cute-as-it-is-practical-195013422.html?src=rss",
+        "published": "Fri, 12 Dec 2025 19:50:13 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>IKEA's <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/ikea-announces-new-matter-compatible-smart-home-products-120013040.html\" target=\"_blank\">revamp of its smart home products</a> doesn't end with Matter support. The furniture and home goods company also has a line of new Qi wireless chargers, the best of which, the <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=e43990ba-ed42-4a73-87a7-cd68b5f3d000&amp;siteId=us-engadget&amp;pageId=1p-auto"
+    },
+    {
+        "id": "https://gizmodo.com/you-dont-want-to-miss-this-years-geminid-meteor-shower-2000699108",
+        "title": "You Don\u2019t Want to Miss This Year\u2019s Geminid Meteor Shower",
+        "link": "https://gizmodo.com/you-dont-want-to-miss-this-years-geminid-meteor-shower-2000699108",
+        "published": "Fri, 12 Dec 2025 20:05:41 +0000",
+        "source": "Gizmodo",
+        "summary": "All conditions favor a dazzling show across the skies this weekend."
+    },
+    {
+        "id": "https://gizmodo.com/do-kwon-gets-15-years-for-40-billion-crypto-collapse-as-victims-testify-to-destruction-he-caused-2000699082",
+        "title": "Do Kwon Gets 15 Years for $40 Billion Crypto Collapse as Victims Testify to Destruction He Caused",
+        "link": "https://gizmodo.com/do-kwon-gets-15-years-for-40-billion-crypto-collapse-as-victims-testify-to-destruction-he-caused-2000699082",
+        "published": "Fri, 12 Dec 2025 19:55:21 +0000",
+        "source": "Gizmodo",
+        "summary": "The collapse of Terraform Labs was part of a greater deleveraging event in crypto that culminated in the fall of FTX."
+    },
+    {
+        "id": "https://gizmodo.com/everything-to-remember-before-avatar-fire-and-ash-2000696727",
+        "title": "Everything to Remember Before \u2018Avatar: Fire and Ash\u2019",
+        "link": "https://gizmodo.com/everything-to-remember-before-avatar-fire-and-ash-2000696727",
+        "published": "Fri, 12 Dec 2025 19:20:27 +0000",
+        "source": "Gizmodo",
+        "summary": "With James Cameron's latest blockbuster on the way, it's time to refresh yourself on the world of Pandora."
+    },
+    {
+        "id": "https://mashable.com/article/sony-afeela-digital-license-plate",
+        "title": "Sonys Afeela electric vehicle will offer digital license plates",
+        "link": "https://mashable.com/article/sony-afeela-digital-license-plate",
+        "published": "Fri, 12 Dec 2025 19:14:25 +0000",
+        "source": "Mashable",
+        "summary": "Sony's upcoming electric Afeela car will let you get up to unprecedented vanity plate shenanigans with a digital license plate."
+    },
+    {
+        "id": "https://mashable.com/article/att-data-breach-settlement-claim-7500-dollars",
+        "title": "The AT&T data breach settlement deadline is almost here. How to file a claim in the $177 million case.",
+        "link": "https://mashable.com/article/att-data-breach-settlement-claim-7500-dollars",
+        "published": "Fri, 12 Dec 2025 19:09:03 +0000",
+        "source": "Mashable",
+        "summary": "Following a massive customer data breach, AT&amp;T is paying out a $177 million class action settlement. Learn how to file a claim before the December deadline."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-i-download-youtube-videos-for-free/",
+        "title": "How I download YouTube videos for free - 2 easy and reliable methods to do it",
+        "link": "https://www.zdnet.com/article/how-i-download-youtube-videos-for-free/",
+        "published": "Fri, 12 Dec 2025 19:38:49 GMT",
+        "source": "Latest news",
+        "summary": "You can download YouTube videos to watch at any time - even without a Premium subscription. Here's how I do it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/i-compared-5g-network-signals-of-verizon-t-mobile-and-at-t-on-a-road-trip-heres-who-wins/",
+        "title": "I compared 5G network signals of Verizon, T-Mobile, and AT&T on a road trip - here's who wins",
+        "link": "https://www.zdnet.com/article/i-compared-5g-network-signals-of-verizon-t-mobile-and-at-t-on-a-road-trip-heres-who-wins/",
+        "published": "Fri, 12 Dec 2025 19:36:00 GMT",
+        "source": "Latest news",
+        "summary": "Between the three biggest mobile carriers, here's which one delivers the best (and most consistent) network signal."
+    },
+    {
+        "id": "https://www.zdnet.com/article/text-image-tests-openai-gpt-5-2-mixed-results-compare-gpt-5-1/",
+        "title": "I tested GPT-5.2 and the AI model's mixed results raise tough questions",
+        "link": "https://www.zdnet.com/article/text-image-tests-openai-gpt-5-2-mixed-results-compare-gpt-5-1/",
+        "published": "Fri, 12 Dec 2025 19:21:00 GMT",
+        "source": "Latest news",
+        "summary": "Subjected to my battery of 10 text tests and 4 image challenges, OpenAI's latest model barely edged out GPT-5.1. What are Plus subscribers actually paying for?"
+    },
+    {
+        "id": "https://www.youtube.com/watch?v=qEllWdK4l_A",
+        "title": "Benn Jordan's flock camera jammer will send you to jail in Florida now [video]",
+        "link": "https://www.youtube.com/watch?v=qEllWdK4l_A",
+        "published": "Fri, 12 Dec 2025 18:58:43 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46247415\">Comments</a>"
     }
 ]
